@@ -85,6 +85,7 @@ def reset_hotkeys():
     add_hotkey(pygame.K_F5, hka.quicksave)
     add_hotkey(pygame.K_F6, hka.reload_theme)
     add_hotkey(pygame.K_F9, hka.quickload)
+    add_hotkey(pygame.K_F11, hka.toggle_cheat_menu)
 
 
 def add_hotkey(key: int, action: HotkeyAction, *, hotkey_modifiers: int = 0) -> None:
